fix alignment

--- a/about-dark.css
+++ b/about-dark.css
@@ -18,8 +18,8 @@ nav {
     margin: 0px 70px;
     display: flex;
     align-items: center;
-    gap: 300px;
-
+    justify-content: space-around;
+    gap: 200px;
 }
 
 
@@ -360,13 +360,11 @@ header nav ul li a {
 
 .footer-links {
     display: flex;
-    gap: 130px;
+    justify-content: space-around;
     margin-top: 184px;
 }
 
-.footer-logo-left{
-    margin-left: 75px;
-}
+
 
 .footer-links ul li{
     list-style-type: none;
