--- a/about-light.css
+++ b/about-light.css
@@ -18,8 +18,8 @@ nav {
     margin: 0px 70px;
     display: flex;
     align-items: center;
-    gap: 300px;
-
+    justify-content: space-around;
+    gap: 200px;
 }
 
 
@@ -49,7 +49,6 @@ header nav ul li a {
 /* about and content box styling */
 .about {
     font-size: 20px;
-    margin: 0px 0px 20px 70px;
     color: #0A2640;    
 }
 
@@ -57,6 +56,7 @@ header nav ul li a {
     display: flex;
     margin: 0 70px;
     padding-bottom: 100px;
+    justify-content: center;
 }
 
 .heading-text h3 {
@@ -152,7 +152,7 @@ header nav ul li a {
 
 .section-four{
     display: flex;
-    margin: 60px 240px;
+    justify-content: center;
 }
 
 
@@ -172,6 +172,7 @@ header nav ul li a {
     font-size: 20px;
     line-height: 32px;
     color: #777777;
+    margin-bottom: 56px;
 }
 
 
@@ -180,8 +181,7 @@ header nav ul li a {
 
 .man-images{
     display: flex;
-    margin: 0px 190px;
-    
+    justify-content: center;    
 }
 
 
@@ -413,13 +413,10 @@ span{
 
 .footer-links {
     display: flex;
-    gap: 130px;
+    justify-content: space-around;
     margin-top: 184px;
 }
 
-.footer-logo-left{
-    margin-left: 75px;
-}
 
 .footer-links ul li{
     list-style-type: none;
